--- a/PWA/Pages/User/Register.razor
+++ b/PWA/Pages/User/Register.razor
@@ -1,7 +1,7 @@
-﻿@using System.ComponentModel.DataAnnotations
-@page "/Register"
+﻿@page "/Register"
 
 <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
+    <DataAnnotationsValidator/>
     <div class="d-flex justify-center">
          <MudImage Src="images\logo.png" ObjectFit="@ImageFit" Height="300" Width="300"/>
     </div>
@@ -9,7 +9,7 @@
     <MudGrid>
         <MudSpacer />
         <MudItem xs="12" sm="3">
-            <MudCard>
+            <MudCard Elevation="5">
                 <MudCardContent>
                     <MudText Typo="Typo.h5" Align="Align.Center">Register</MudText>
                     <MudTextField Label="Email"
@@ -19,7 +19,7 @@
                     <MudTextField Label="Password" Class="mt-3"
                                   @bind-Value="model.Password" For="@(() => model.Password)" InputType="InputType.Password" />
                     <MudTextField Label="Confirm Password" Class="mt-3"
-                                  @bind-Value="model.Password" For="@(() => model.Password)" InputType="InputType.Password" />
+                                  @bind-Value="model.ConfirmPassword" For="@(() => model.ConfirmPassword)" InputType="InputType.Password" />
 
                 </MudCardContent>
                 <MudCardActions>
@@ -47,19 +47,11 @@
 
 @code {
     RegisterDto model = new();
-
-    bool Disabled { get; set; }
-
     DefaultFocus DefaultFocus { get; set; } = DefaultFocus.FirstChild;
-
-    bool success;
-
     ObjectFit ImageFit = ObjectFit.ScaleDown;
 
-    private void OnValidSubmit(EditContext context)
+    async Task OnValidSubmit()
     {
-        success = true;
-        StateHasChanged();
+        
     }
-
 }
