--- a/PWA/_Imports.razor
+++ b/PWA/_Imports.razor
@@ -5,8 +5,13 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
+
 @using PWA
 @using PWA.Shared
-@using MudBlazor
 @using PWA.Shared.DTOs
+
+@using MudBlazor
+@using Blazored.LocalStorage;
