--- a/PWA/Pages/User/Login.razor
+++ b/PWA/Pages/User/Login.razor
@@ -1,4 +1,7 @@
 ﻿@page "/Login"
+@inject AuthService AuthService
+@inject NavigationManager Nav
+@inject ISnackbar SnackBar
 
 <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
     <DataAnnotationsValidator/>
@@ -19,7 +22,18 @@
                 </MudCardContent>
                 <MudCardActions>
                     <MudSpacer />
-                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Outlined" Color="Color.Primary" Class="ml-auto">Connect</MudButton>
+                    <MudButton ButtonType="ButtonType.Submit" Disabled="isLoading"
+                               Variant="Variant.Outlined" Color="Color.Primary" Class="ml-auto">
+                        @if (isLoading)
+                        {
+                            <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true"/>
+                            <MudText>Connecting</MudText>
+                        }
+                        else
+                        {
+                            <MudText>Connect</MudText>
+                        }
+                    </MudButton>
                     <MudSpacer />
                 </MudCardActions>
             </MudCard>
@@ -44,9 +58,22 @@
     LoginDto model = new();
     DefaultFocus DefaultFocus { get; set; } = DefaultFocus.FirstChild;
     ObjectFit ImageFit = ObjectFit.ScaleDown;
+    bool isLoading;
 
     async Task OnValidSubmit()
     {
-        
+        isLoading = true;
+
+        CustomResponse<UserDto> response = await AuthService.LoginAsync(model);
+        if (response.IsSuccessful)
+        {
+            Nav.NavigateTo("", false);
+        }
+        else
+        {
+            SnackBar.Add(response.Message, Severity.Error);
+        }
+
+        isLoading = false;
     }
 }
