--- a/PWA/Pages/User/Register.razor
+++ b/PWA/Pages/User/Register.razor
@@ -1,4 +1,7 @@
 ﻿@page "/Register"
+@inject AuthService AuthService
+@inject NavigationManager Nav
+@inject ISnackbar SnackBar
 
 <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
     <DataAnnotationsValidator/>
@@ -14,17 +17,30 @@
                     <MudText Typo="Typo.h5" Align="Align.Center">Register</MudText>
                     <MudTextField Label="Email"
                                   @bind-Value="model.Email" For="@(() => model.Email)" InputType="InputType.Email"/>
-                    <MudTextField Label="Username"
-                                  @bind-Value="model.UserName" For="@(() => model.UserName)" />
+                    <MudTextField Label="Nume"
+                                  @bind-Value="model.LastName" For="@(() => model.LastName)" />
+                    <MudTextField Label="Prenume"
+                                  @bind-Value="model.FirstName" For="@(() => model.FirstName)" />
+                    <MudTextField Label="Telefon"
+                                  @bind-Value="model.Phone" For="@(() => model.Phone)" />
                     <MudTextField Label="Password" Class="mt-3"
                                   @bind-Value="model.Password" For="@(() => model.Password)" InputType="InputType.Password" />
                     <MudTextField Label="Confirm Password" Class="mt-3"
                                   @bind-Value="model.ConfirmPassword" For="@(() => model.ConfirmPassword)" InputType="InputType.Password" />
-
                 </MudCardContent>
                 <MudCardActions>
                     <MudSpacer />
-                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Outlined" Color="Color.Primary" Class="ml-auto">Register</MudButton>
+                    <MudButton ButtonType="ButtonType.Submit" Disabled="isLoading"
+                               Variant="Variant.Outlined" Color="Color.Primary" Class="ml-auto">
+                        @if (isLoading)
+                        {
+                            <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true"/>
+                            <MudText>Registering</MudText>
+                        }else
+                        {
+                            <MudText>Register</MudText>
+                        }
+                    </MudButton>
                     <MudSpacer />
                 </MudCardActions>
             </MudCard>
@@ -49,9 +65,22 @@
     RegisterDto model = new();
     DefaultFocus DefaultFocus { get; set; } = DefaultFocus.FirstChild;
     ObjectFit ImageFit = ObjectFit.ScaleDown;
+    bool isLoading;
 
     async Task OnValidSubmit()
     {
-        
+        isLoading = true;
+
+        CustomResponse<UserDto> response = await AuthService.RegisterAsync(model);
+        if (response.IsSuccessful)
+        {
+            Nav.NavigateTo("", false);
+        }
+        else
+        {
+            SnackBar.Add(response.Message, Severity.Error);
+        }
+
+        isLoading = false;
     }
 }
