--- a/PWA/Pages/User/Login.razor
+++ b/PWA/Pages/User/Login.razor
@@ -19,7 +19,7 @@
                 </MudCardContent>
                 <MudCardActions>
                     <MudSpacer />
-                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Outlined" Color="Color.Primary" Class="ml-auto">Connect</MudButton>
+                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Outlined" Color="Color.Primary" Class="ml-auto" Href="/Home">Connect</MudButton>
                     <MudSpacer />
                 </MudCardActions>
             </MudCard>
