--- a/PWA/Pages/User/Login.razor
+++ b/PWA/Pages/User/Login.razor
@@ -15,8 +15,8 @@
             <MudCard Elevation="5">
                 <MudCardContent>
                     <MudText Typo="Typo.h5" Align="Align.Center">Login</MudText>
-                    <MudTextField Label="Username"
-                                  @bind-Value="model.UserName" For="@(() => model.UserName)"/>                 
+                    <MudTextField Label="Email"
+                                  @bind-Value="model.Email" For="@(() => model.Email)" />
                     <MudTextField Label="Password"  Class="mt-3"
                                   @bind-Value="model.Password" For="@(() => model.Password)" InputType="InputType.Password"/>
                 </MudCardContent>
