Incepere form adaugare adresa

--- a/PWA/Shared/MainLayout.razor
+++ b/PWA/Shared/MainLayout.razor
@@ -11,7 +11,8 @@
 
         <AuthorizeView>
             <Authorized>
-                <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Dark" Size="Size.Medium" />
+                <MudIconButton Icon="@Icons.Material.Filled.Home" Color="Color.Dark" Size="Size.Medium" Href="/" />
+                <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Dark" Size="Size.Medium" Href="/AddressForm"/>
                 <MudIconButton Icon="@Icons.Material.Filled.LocationOn" Color="Color.Dark" Size="Size.Medium" />
                 <MudIconButton Icon="@Icons.Material.Filled.Person" Color="Color.Dark" Size="Size.Medium" />
 
