--- a/PWA/Pages/User/AddressForm.razor
+++ b/PWA/Pages/User/AddressForm.razor
@@ -8,20 +8,31 @@
         <MudItem xs="12" sm="7">
             <MudCard>
                 <MudCardContent>
-                    <MudTextField Label="Strada"
-                                  @bind-Value="model.Strada" For="@(() => model.Strada)" />
-                    <MudTextField Label="Numar"
+                    <MudTextField Label="Tip strada"
+                                  @bind-Value="model.Tip_Strada" For="@(() => model.Tip_Strada)" />
+                    <MudTextField Label="Denumire strada"
+                                  @bind-Value="model.Denumire_Strada" For="@(() => model.Denumire_Strada)" />
+                    <MudTextField Label="Numarul"
                                   @bind-Value="model.Numar" For="@(() => model.Numar)" />
 
                     <MudTextField Label="Bloc" HelperText="(Optional)"
-                                  @bind-Value="model.Bloc" For="@(() => model.Bloc)" />
-                    <MudTextField Label="Scara" HelperText="(Optional)"
+                                  @bind-Value="model.Bloc" For="@(() => model.Bloc)" />                  
+                    <MudTextField Label="Scara" Class="mt-3" HelperText="(Optional)"
                                   @bind-Value="model.Scara" For="@(() => model.Scara)" />
-                    
-                    <MudTextField Label="Judet" Class="mt-3"
-                                  @bind-Value="model.Judet" For="@(() => model.Judet)" />
-                    <MudTextField Label="Oras" Class="mt-3"
-                                  @bind-Value="model.Oras" For="@(() => model.Oras)" InputType="InputType.Password" />
+
+                    <MudTextField Label="Stadiul blocului" Class="mt-3"
+                                  @bind-Value="model.Stadiul_Blocului" For="@(() => model.Stadiul_Blocului)" />
+                    <MudTextField Label="Anul constructiei" Class="mt-3"
+                                  @bind-Value="model.Anul_Construirii" For="@(() => model.Anul_Construirii)" />
+
+                    <MudTextField Label="Regim de inaltime (S+P+M)" HelperText="(Optional)" Class="mt-3"
+                                  @bind-Value="model.Regim_Inaltime" For="@(() => model.Regim_Inaltime)" />
+                    <MudTextField Label="Sistemul constructiv" HelperText="(Optional) Class="mt-3"
+                                  @bind-Value="model.Sistemul_constructiv" For="@(() => model.Sistemul_constructiv)" />
+                    <MudTextField Label="Numar apartamente" Class="mt-3"
+                                  @bind-Value="model.Numar_apartamente" For="@(() => model.Numar_apartamente)" />
+
+
                 </MudCardContent>
                 <MudCardActions>
                     <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto">Register</MudButton>
