--- a/PWA/Pages/Index.razor
+++ b/PWA/Pages/Index.razor
@@ -3,4 +3,7 @@
  
 <PageTitle>Index</PageTitle>
 
-<iframe width="500" height="1000" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=25.958461761474613%2C44.377980910803274%2C26.24513626098633%2C44.48903571428139&amp;layer=mapnik&amp;"/>
+@*TO DO: Tabel cu adrese(deschide edit pt adresa + upload)
+         Harta cu pinuri pt adrese
+
+*@
