--- a/PWA/Shared/MainLayout.razor
+++ b/PWA/Shared/MainLayout.razor
@@ -11,17 +11,26 @@
 
         <AuthorizeView>
             <Authorized>
-                <MudIconButton Icon="@Icons.Material.Filled.Home" Color="Color.Dark" Size="Size.Medium" Href="/" />
-                <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Dark" Size="Size.Medium" Href="/AddressForm"/>
-                <MudIconButton Icon="@Icons.Material.Filled.LocationOn" Color="Color.Dark" Size="Size.Medium" />
-                <MudIconButton Icon="@Icons.Material.Filled.Person" Color="Color.Dark" Size="Size.Medium" />
+                <MudTooltip Text="Home">
+                    <MudIconButton Icon="@Icons.Material.Filled.Home" Color="Color.Dark" Size="Size.Medium" Href="/" />
+                </MudTooltip>
+                <MudTooltip Text="Add">
+                    <MudIconButton Icon="@Icons.Material.Filled.Add" Color="Color.Dark" Size="Size.Medium" Href="/AddressForm" />
+                </MudTooltip>
+                <MudTooltip Text="Map">
+                    <MudIconButton Icon="@Icons.Material.Filled.LocationOn" Color="Color.Dark" Size="Size.Medium" />
+                </MudTooltip>
+                <MudTooltip Text="Info">
+                    <MudIconButton Icon="@Icons.Material.Filled.Person" Color="Color.Dark" Size="Size.Medium" Href="/UserInfo"/>
+                </MudTooltip>
 
                 <MudSpacer/>
-
+                <MudTooltip Text="settings">
                 <MudMenu Icon="@Icons.Material.Filled.Settings" Color="Color.Dark">
                     <MudMenuItem>@context.User.Identity.Name</MudMenuItem>
                     <MudMenuItem OnClick="@(async () => await AuthService.Logout())">Logout</MudMenuItem>
                 </MudMenu>
+                </MudTooltip>
 
                 <MudSwitch @bind-Checked="isDarkTheme" Color="Color.Dark" ThumbIcon="@GetThemeIcon()" />
             </Authorized>
@@ -51,7 +60,6 @@
         PaletteDark = new PaletteDark()
         {
             Primary = Colors.Cyan.Default,
-            
         }
     };
 }
