--- a/PWA/Pages/User/Register.razor
+++ b/PWA/Pages/User/Register.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Register"
 @inject IAuthService AuthService
 @inject NavigationManager Nav
+@inject ISnackbar snackBar
 
 <EditForm Model="@model" OnValidSubmit="OnValidSubmit">
     <DataAnnotationsValidator/>
@@ -75,6 +76,8 @@
         {
             Nav.NavigateTo("login", false);
         }
+        else
+            snackBar.Add(response.Message, Severity.Error);
 
         isLoading = false;
     }
