aducere lista cu cladiri

--- a/PWA/Pages/User/AddressForm.razor
+++ b/PWA/Pages/User/AddressForm.razor
@@ -1,5 +1,6 @@
 ﻿@page "/AddressForm"
 @inject CladiriService CladiriService
+@inject CladiriRepo cladiriRepo
 @inject ISnackbar Snackbar
 
 <MudText Style="font-size:x-large; font-weight:700; font-family:sans-serif;" Color="Color.Primary" Align="Align.Center">Adaugare adresa</MudText>
