--- a/PWA/Pages/Index.razor
+++ b/PWA/Pages/Index.razor
@@ -1,35 +1,61 @@
 ﻿@page "/"
 @attribute [Authorize]
-@inject ILocalStorageService localStorageService
+@inject CladiriService service
  
 <PageTitle>Index</PageTitle>
 
-<MudTable Items="@Elements.Take(4)" Hover="true" Breakpoint="Breakpoint.Sm" Loading="@_loading" LoadingProgressColor="Color.Info">
+<MudTable Items="cladiri" Hover="true" LoadingProgressColor="Color.Info" HorizontalScrollbar=true FixedHeader=true>
+    <ToolBarContent>
+        <MudSpacer/><MudSpacer/>
+        <MudTextField @bind-Value="searchString" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+    </ToolBarContent>
     <HeaderContent>
-        <MudTh>Nr</MudTh>
-        <MudTh>Sign</MudTh>
-        <MudTh>Name</MudTh>
-        <MudTh>Position</MudTh>
-        <MudTh>Molar mass</MudTh>
+        <MudTh><MudTableSortLabel SortBy="new Func<CladireDto, object>(x=>x.Tip_Strada)">Adresa</MudTableSortLabel></MudTh>
+        <MudTh>Stadiu</MudTh>
+        <MudTh>Imagini</MudTh>
+        <MudTh>Editare</MudTh>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Nr">@context.Number</MudTd>
-        <MudTd DataLabel="Sign">@context.Sign</MudTd>
-        <MudTd DataLabel="Name">@context.Name</MudTd>
-        <MudTd DataLabel="Position" HideSmall="_hidePosition">@context.Position</MudTd>
-        <MudTd DataLabel="Molar mass">@context.Molar</MudTd>
+        <MudTd DataLabel="Adresa">@context.Tip_Strada @context.Denumire_Strada @context.Numar @context.Bloc @context.Scara</MudTd>
+        <MudTd DataLabel="Stadiu">
+            <MudIcon Icon="@Icons.Material.Filled.CheckCircle" Color="Color.Success"></MudIcon>
+        </MudTd>
+        <MudTd DataLabel="Imagini">
+            <MudIconButton Icon="@Icons.Material.Filled.Image" Color="Color.Primary"></MudIconButton>
+        </MudTd>
+        <MudTd DataLabel="Editare">
+            <MudIconButton Icon="@Icons.Material.Filled.EditNote" Color="Color.Primary"></MudIconButton>
+        </MudTd>
+
     </RowTemplate>
 </MudTable>
 
-<MudSwitch @bind-Checked="_hidePosition">Hide <b>position</b> when Breakpoint=Xs</MudSwitch>
-<MudSwitch @bind-Checked="_loading">Show Loading</MudSwitch>
 @code {
-    CladireDto cladire;
-    
+    private string searchString;
+    List<CladireDto> cladiri;
 
-    protected override async Task OnAfterRenderAsync(bool render)
+    protected override async Task OnInitializedAsync()
     {
-        cladire = await localStorageService.GetItemAsync<CladireDto>("token");
+        CustomResponse<List<CladireDto>> response = await service.GetCladiriAsync();
+        if (response.IsSuccessful)
+            cladiri = response.Data;
+    }
+
+    private bool FilterFunc(CladireDto element, string searchString)
+    {
+        if (string.IsNullOrWhiteSpace(searchString))
+            return true;
+        if (element.Tip_Strada.Contains(searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+        if (element.Denumire_Strada.Contains(searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+        if (element.Numar.Contains(searchString, StringComparison.OrdinalIgnoreCase))
+            return true; 
+        if (element.Bloc.Contains(searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+        if (element.Scara.Contains(searchString, StringComparison.OrdinalIgnoreCase))
+            return true;
+        return false;
     }
 
 }
