--- a/PWA/Pages/User/UserInfo.razor
+++ b/PWA/Pages/User/UserInfo.razor
@@ -1,4 +1,6 @@
 ﻿@inject ILocalStorageService localStorageService
+@inject IAuthService AuthService
+
 @page "/UserInfo"
 @attribute [Authorize]
 <MudText Style="font-size:x-large; font-weight:700; font-family:'Segoe UI';" Color="Color.Primary" Align="Align.Center">User information</MudText>
@@ -27,12 +29,12 @@
 </AuthorizeView>
 <MudStack Row>
     <MudSpacer/>
-    <MudFab Class="my-8 rounded-pill" Color="Color.Primary" Label="Change password"></MudFab>
+    <MudFab Class="my-8 rounded-pill" Color="Color.Primary" Label="Change password" Href="/ChangePassword"></MudFab>
     <MudSpacer/>
 </MudStack>
 <MudStack Row>
     <MudSpacer />
-    <MudFab Class="rounded-pill" Color="Color.Primary" Label="Logout"></MudFab>
+    <MudFab Class="rounded-pill" Color="Color.Primary" OnClick="@(async () => await AuthService.Logout())" Label="Logout"></MudFab>
     <MudSpacer />
 </MudStack>
 @code {
