Lat and long are now saved in db

--- a/PWA/Pages/User/AddressForm.razor
+++ b/PWA/Pages/User/AddressForm.razor
@@ -88,6 +88,10 @@
         model.Tip_Strada = tipStrada;
         model.Denumire_Strada = strada;
         model.Numar = numar;
+
+        model.Longitudine = (float) addressObj["geometry"]["lng"];
+        model.Latitudine = (float) addressObj["geometry"]["lat"];
+
         StateHasChanged();
     }
 }
